--- a/MedicalExplorer.rmd
+++ b/MedicalExplorer.rmd
@@ -42,6 +42,7 @@ library(purrr)
 library(ggQC)
 library(qcc)
 library(patchwork)
+#https://cran.r-project.org/web/packages/prettydoc/vignettes/tactile.html
 
 cache="C:/Users/Leesah/Documents/Cache"
 
@@ -79,6 +80,10 @@ Labs <- read_sheet("https://docs.google.com/spreadsheets/d/19XInBvIBXgfDg3SBD5ZP
 
 Temperature <- read_sheet("https://docs.google.com/spreadsheets/d/19XInBvIBXgfDg3SBD5ZPddCo7111iFO-cMM3J667mCA/edit#gid=968544884", sheet = "Temperature")
 
+Vitals <- read_sheet("https://docs.google.com/spreadsheets/d/19XInBvIBXgfDg3SBD5ZPddCo7111iFO-cMM3J667mCA/edit#gid=968544884", sheet = "Vitals")
+
+Immunizations <- read_sheet("https://docs.google.com/spreadsheets/d/19XInBvIBXgfDg3SBD5ZPddCo7111iFO-cMM3J667mCA/edit#gid=968544884", sheet = "Immunizations")
+
 Lisa_picture <- "MVIMG_20200402_143008.jpg"
 
 #googledrive functions 
@@ -87,33 +92,6 @@ Lisa_picture <- "MVIMG_20200402_143008.jpg"
 
 ```
 
-
-```{r get-data, message=FALSE, include=FALSE}
-# #Load data from Google Drive
-# 
-# Records <- read_sheet("https://docs.google.com/spreadsheets/d/19XInBvIBXgfDg3SBD5ZPddCo7111iFO-cMM3J667mCA/edit#gid=968544884", sheet = "Records")
-# 
-# Doctors <- read_sheet("https://docs.google.com/spreadsheets/d/19XInBvIBXgfDg3SBD5ZPddCo7111iFO-cMM3J667mCA/edit#gid=968544884", sheet = "Doctors")
-# 
-# Medicines <- read_sheet("https://docs.google.com/spreadsheets/d/19XInBvIBXgfDg3SBD5ZPddCo7111iFO-cMM3J667mCA/edit#gid=968544884", sheet = "Medicines")
-# 
-# History <- read_sheet("https://docs.google.com/spreadsheets/d/19XInBvIBXgfDg3SBD5ZPddCo7111iFO-cMM3J667mCA/edit#gid=968544884", sheet = "History")
-# 
-# Weight <- read_sheet("https://docs.google.com/spreadsheets/d/19XInBvIBXgfDg3SBD5ZPddCo7111iFO-cMM3J667mCA/edit#gid=968544884", sheet = "Weight")
-# 
-# Thyroid <- read_sheet("https://docs.google.com/spreadsheets/d/19XInBvIBXgfDg3SBD5ZPddCo7111iFO-cMM3J667mCA/edit#gid=968544884", sheet = "Thyroid")
-# 
-# Labs <- read_sheet("https://docs.google.com/spreadsheets/d/19XInBvIBXgfDg3SBD5ZPddCo7111iFO-cMM3J667mCA/edit#gid=968544884", sheet = "Labs")
-# 
-# Temperature <- read_sheet("https://docs.google.com/spreadsheets/d/19XInBvIBXgfDg3SBD5ZPddCo7111iFO-cMM3J667mCA/edit#gid=968544884", sheet = "Temperature")
-# 
-# Lisa_picture <- "MVIMG_20200402_143008.jpg"
-# 
-# #googledrive functions 
-# #googledrive::drive_find()
-# #googledrive::drive_get()
-
-```
 
 Lisa Anders {data-orientation=columns}
 ===================================== 
@@ -128,9 +106,6 @@ Column
 
 Hello! I developed this to better visualize my personal health data while I was going through some complicated medical evaluations. I hope you find this tool useful too.
 
->Count Rugen: Get some rest. If you haven't got your health, you haven't got anything.
-
->`r tufte::quote_footer('--- The Princess Bride, 1987 Film')`
 
 ```{r, out.width = "50%"}
 #http://zevross.com/blog/2017/06/19/tips-and-tricks-for-working-with-images-and-figures-in-r-markdown-documents/
@@ -138,7 +113,7 @@ Hello! I developed this to better visualize my personal health data while I was 
 ```
 
 
-Main {data-orientation=columns}
+At a Glance {data-orientation=columns}
 ===================================== 
 
 Column{data-width=350}
@@ -163,10 +138,6 @@ age = function(from, to) {
 
 age = age(from = birthday,to = Sys.Date())
 
-# Show the number in a special valueBox (note the {.value-box} CSS class
-# above—that applies the CSS class to the HTML output and makes it render
-# correctly)
-# valueBox(value = age, icon = "fas fa-users")
 valueBox(value = age, icon = "far fa-hand-spock")
 ```
 
@@ -175,9 +146,6 @@ valueBox(value = age, icon = "far fa-hand-spock")
 ```{r}
 currentHeight =paste0("5' 5",'"')
 
-# Show the number in a special valueBox (note the {.value-box} CSS class
-# above—that applies the CSS class to the HTML output and makes it render
-# correctly)
 valueBox(value = currentHeight, icon = "fas fa-rocket")
 ```
 
@@ -194,9 +162,6 @@ last_weight =  Weight %>%
   
   currentWeight = paste0(last_weight$Weight, " (",last_weight$Difference, ") lbs")
 
-# Show the number in a special valueBox (note the {.value-box} CSS class
-# above—that applies the CSS class to the HTML output and makes it render
-# correctly)
 valueBox(value = currentWeight, icon = "fas fa-robot")
 ```
 
@@ -215,30 +180,182 @@ kable(Medicines %>% arrange(Treatment) %>% filter(is.na(EndDate)==TRUE) %>% sele
 ```
 
 
+Vitals {data-orientation=rows}
+=====================================
 
-Allergies {data-orientation=columns}
-===================================== 
+Rows 
+-------------------------------------
 
-### Allergen Information
+### Age 
+
 ```{r}
+
+birthday = "1989-07-30"
+
+age = function(from, to) {
+  from_lt = as.POSIXlt(from)
+  to_lt = as.POSIXlt(to)
+
+  age = to_lt$year - from_lt$year
+
+  ifelse(to_lt$mon < from_lt$mon |
+         (to_lt$mon == from_lt$mon & to_lt$mday < from_lt$mday),
+         age - 1, age)
+}
+
+age = age(from = birthday,to = Sys.Date())
+
+valueBox(value = age, icon = "far fa-hand-spock")
+```
+
+### Height
+
+```{r}
+currentHeight =paste0("5' 5",'"')
+
+valueBox(value = currentHeight, icon = "fas fa-rocket")
+```
+
+### Weight
+
+```{r}
+last_weight =  Weight %>% 
+  arrange(Date) %>% 
+  mutate(previous_weight = lag(Weight, order_by = Date), Date =as.Date(Date)) %>% 
+  mutate(Color = ifelse(Weight > previous_weight, "red", "green"),
+         Difference = paste0(ifelse(Weight > previous_weight, "+", "-"),round(Weight-previous_weight,1))) %>%
+  arrange(desc(Date)) %>%
+  head(1)
+  
+  currentWeight = paste0(last_weight$Weight, " (",last_weight$Difference, ") lbs")
+
+valueBox(value = currentWeight, icon = "fas fa-robot")
+```
+
+### Blood Pressure
+
+```{r}
+last_bp =  Vitals %>% 
+  arrange(desc(Date)) %>% 
+  filter(Test == "Blood Pressure") %>%
+  head(1)
+  
+currentBP = paste0(last_bp$Value, " ", last_bp$Units )
+
+valueBox(value = currentBP, icon = "fas fa-clipboard-list")
+```
+
+
+Rows
+-------------------------------------
+
+### Weight
+```{r}
+# TODO: Switch from weight tab to vitals 
+# Weight_v <- data.frame(Vitals) %>%
+#   filter(Test == "Weight") %>%
+#   rename("Weight" = "Value")
+
+weighttst <- Weight %>% 
+  arrange(Date) %>% 
+  mutate(previous_weight = lag(Weight, order_by = Date), Date =as.Date(Date)) %>% 
+  mutate(Color = ifelse(Weight > previous_weight, "red", "green")) %>%
+  mutate(Color = ifelse(is.na(Color),"black", Color)) %>%
+  # ggplot(aes(x = Date, y= Weight, color = Color))+
+  ggplot(aes(x = Date, y= Weight))+
+    geom_point(shape=1, aes(color = Color))+            # Use hollow circles
+    #geom_smooth( method="lm", linetype = 'blank') +
+    #stat_smooth(data = Weight, aes(x = Date,y = Weight), method="lm", linetype = 'blank') +
+    #geom_line(color="grey")+
+    #geom_smooth() +            # Add a loess smoothed fit curve with confidence region
+    scale_color_identity() +
+    scale_x_date(date_labels = "%Y/%m/%d", date_breaks = "3 month") +
+    scale_y_continuous(limits=c(100, 175)) +
+    labs(x = "Year-Month", y = "Weight (lbs)") +
+    #theme(axis.text.x=element_text(angle=60, hjust=1), legend.title = element_blank(), legend.position = "none" )
+    theme(axis.text.x=element_text(angle=60, hjust=1), 
+          legend.title = element_blank(), 
+          legend.position = "none",
+          panel.border = element_blank(),
+          panel.background = element_blank(),
+          panel.grid.major = element_blank(),
+          panel.grid.minor = element_blank()) 
+
+ggplotly(weighttst) %>% 
+  layout(title = list(text = "Weight, gains in red", y = 0.95),
+     #xaxis = list(showticklabels = FALSE),
+     legend = list(orientation = "h",
+                   y = 0, x = 0))
+```
+
+### Temperature 
+```{r}
+# 
+# # Define levels to color by Type
+# temp_levels = unique(Temperature$Hour)
+# Temperature$Hour <- factor(Temperature$Hour, levels=temp_levels, ordered=TRUE)
+# 
+# # Define colors
+# color = brewer.pal(n = length(unique(Temperature$Hour)), name = "RdBu")
+
+temp <- Temperature %>% 
+  arrange(Date) %>% 
+  # Add flag for waking temperatures
+  mutate(Waking_Temp = ifelse( (Hour == 8) | (Hour == 7) | (Hour == 6), "black", "grey")) %>%
+  # ggplot(aes(x = as.Date(Date), y= Temp, color = Waking_Temp))+
+  ggplot(aes(x = as.Date(Date), y= Temp))+
+  # ggplot(aes(x = as.Date(Date), y= Temp, color = Waking_Temp))+
+    geom_point(shape=1, aes(color = Waking_Temp)) +            # Use hollow circles
+    #geom_line(color="grey")+
+    #stat_smooth(method="lm", aes(color = Waking_Temp)) +
+    #stat_smooth() +
+    #geom_smooth() +            # Add a loess smoothed fit curve with confidence region
+    scale_color_identity() +
+    scale_x_date(date_labels = "%Y/%m/%d", date_breaks = "3 month") +
+    scale_y_continuous(limits=c(95, 105)) +
+    labs(x = "Year-Month", y = "Temp (F)", legend = "Waking Temperature") +
+    #theme(axis.text.x=element_text(angle=60, hjust=1))
+    theme(axis.text.x=element_text(angle=60, hjust=1), 
+          legend.title = element_blank(), 
+          legend.position = "none",
+          panel.border = element_blank(),
+          panel.background = element_blank(),
+          panel.grid.major = element_blank(),
+          panel.grid.minor = element_blank()) 
+
+ggplotly(temp) %>% 
+  layout(title = list(text = "Temperature, waking temp in black", y = 0.95),
+     #xaxis = list(showticklabels = FALSE),
+     legend = list(orientation = "h",
+                   y = 0, x = 0))
+
 
 ```
 
 
 
-Conditions {data-orientation=columns}
-===================================== 
+
+
+
+```{r}
+#Allergies {data-orientation=columns}
+#===================================== 
 
 ### Allergen Information
-```{r}
 
 ```
+
 
 Immunizations {data-orientation=columns}
 ===================================== 
 
-### Allergen Information
+### Vaccination History
 ```{r}
+#Collapse first column if contents repeat
+kable(Immunizations %>% arrange(desc(Date)), align = "c") %>%
+  kable_styling(full_width = F) %>%
+  column_spec(1, bold = T) %>%
+  collapse_rows(columns = 1:2, valign = "top")
 
 ```
 
@@ -269,6 +386,7 @@ valueBox(value = thycurrent_lab, icon = "fas fa-rocket")
 ### Current thyroid medication is: 
 
 ```{r}
+# TODO: set up multiple line handling 
 thycurrent_med<- Medicines %>%
   filter(Treatment == "Hypothyroidism") %>%
   mutate(Medicine = paste0(Medication," - ", Qty), StartDate = as.Date(StartDate), EndDate = as.Date(EndDate)) %>%
@@ -277,7 +395,7 @@ thycurrent_med<- Medicines %>%
 thycurrent_med<- thycurrent_med %>%
   filter(StartDate == max(thycurrent_med$StartDate, na.rm=T))
 
-thycurrent_med = paste0(thycurrent_med$Medicine, " started on ", thycurrent_med$StartDate)
+thycurrent_med = paste0(thycurrent_med$Medicine, " started on ", thycurrent_med$StartDate, collapse = " ")
 
 # Show the number in a special valueBox (note the {.value-box} CSS class
 # above—that applies the CSS class to the HTML output and makes it render
@@ -403,69 +521,8 @@ gp %>% layout(margin =m)
 
 ```
 
-Wellness {data-orientation=rows}
-=====================================
-
-Rows
--------------------------------------
-
-### Weight
-```{r}
-
-weighttst <- Weight %>% 
-  arrange(Date) %>% 
-  mutate(previous_weight = lag(Weight, order_by = Date), Date =as.Date(Date)) %>% 
-  mutate(Color = ifelse(Weight > previous_weight, "red", "green")) %>%
-  ggplot(aes(x = Date, y= Weight, color = Color))+
-    geom_point(shape=1)+            # Use hollow circles
-    geom_line(color="grey")+
-    #geom_smooth() +            # Add a loess smoothed fit curve with confidence region
-    scale_color_identity() +
-    scale_x_date(date_labels = "%Y/%m/%d", date_breaks = "1 month") +
-    scale_y_continuous(limits=c(100, 175)) +
-    labs(x = "Year-Month", y = "Weight (lbs)") +
-    theme(axis.text.x=element_text(angle=60, hjust=1), legend.title = element_blank(), legend.position = "none" )
-
-ggplotly(weighttst) %>% 
-  layout(title = list(text = "Weight, gains in red", y = 0.95),
-     #xaxis = list(showticklabels = FALSE),
-     legend = list(orientation = "h",
-                   y = 0, x = 0))
-```
-
-### Temperature 
-```{r}
-# 
-# # Define levels to color by Type
-# temp_levels = unique(Temperature$Hour)
-# Temperature$Hour <- factor(Temperature$Hour, levels=temp_levels, ordered=TRUE)
-# 
-# # Define colors
-# color = brewer.pal(n = length(unique(Temperature$Hour)), name = "RdBu")
-
-temp <- Temperature %>% 
-  arrange(Date) %>% 
-  mutate(Waking_Temp = ifelse(Hour == 8, "red", "black")) %>%
-  ggplot(aes(x = as.Date(Date), y= Temp, color = Waking_Temp))+
-  # ggplot(aes(x = as.Date(Date), y= Temp, color = Waking_Temp))+
-    geom_point(shape=1)+            # Use hollow circles
-    geom_line(color="grey")+
-    #geom_smooth() +            # Add a loess smoothed fit curve with confidence region
-    scale_color_identity() +
-    scale_x_date(date_labels = "%Y/%m/%d", date_breaks = "1 month") +
-    scale_y_continuous(limits=c(92, 110)) +
-    labs(x = "Year-Month", y = "Temp (F)", legend = "Waking Temperature") +
-    #theme(axis.text.x=element_text(angle=60, hjust=1))
-    theme(axis.text.x=element_text(angle=60, hjust=1), legend.title = element_blank(), legend.position = "none" )
-
-ggplotly(temp) %>% 
-  layout(title = list(text = "Temperature, waking temp in red", y = 0.95),
-     #xaxis = list(showticklabels = FALSE),
-     legend = list(orientation = "h",
-                   y = 0, x = 0))
 
 
-```
 
 
 
@@ -474,8 +531,6 @@ Labs {data-orientation=columns}
 
 Column {.tabset}
 -------------------------------------
-
-### Summary / At a glance
 
 ```{r}
 # style = "data-width: 100%;"
@@ -505,7 +560,13 @@ Labs_plot <- Labs %>%
   filter(is.na(Value) != TRUE) %>%
   filter(is.null(Value) != TRUE) %>%
   filter(Value != "NULL") %>%
-  group_by(Name) 
+  mutate( UL = ifelse(is.null(UL) | is.na(UL) | is.nan(UL), Inf, UL ))  %>% #Set limit to inf if no limit
+  mutate( LL = ifelse(is.null(LL) | is.na(LL) | is.nan(LL), -Inf, LL ))  %>% #Set limit to inf if no limit  
+  # Add flag if measurement came back out of spec
+  mutate(OOS = ifelse((Value > UL | Value < LL),1,0)) %>%
+  # Add flag if any measurement has ever come back out of spec
+  group_by(Name) %>%
+  mutate(Monitor = max(OOS))
   
 Labs_plot_tmp <- data.frame()
 Labs_plot_out <- data.frame()
@@ -531,24 +592,24 @@ for(j in (unique(Labs_plot$Name))){
                        minSpotColor = 'orange',
                        defaultPixelsPerValue = 10# defaults to 3 per value
                        ),
-    TrendDiscrete_Low = spk_chr(
-                       Value, type= "discrete", #One of 'line' (default), 'bar', 'tristate', 'discrete', 'bullet', 'pie' or 'box'
-                       thresholdValue = min(unlist(.$LL)),
-                       thresholdColor = "red", #"#00f", # Color underneath the threshold
-                       lineColor = "green", # Color over the threshold
-                       lineWidth= 3 #defaults to 1
-                       ),
-  TrendDiscrete_High = spk_chr(
-                       Value, type= "discrete", #One of 'line' (default), 'bar', 'tristate', 'discrete', 'bullet', 'pie' or 'box'
-                       thresholdValue = max(unlist(.$UL)),
-                       thresholdColor = "green", #"#00f", # Color underneath the threshold
-                       lineColor = "red", # Color over the threshold
-                       lineWidth= 3 #defaults to 1
-                       ),
-  TrendBox = spk_chr(
-                       Value, type= "box", #One of 'line' (default), 'bar', 'tristate', 'discrete', 'bullet', 'pie' or 'box'
-                       showOutliers = TRUE
-                       ),
+  #   TrendDiscrete_Low = spk_chr(
+  #                      Value, type= "discrete", #One of 'line' (default), 'bar', 'tristate', 'discrete', 'bullet', 'pie' or 'box'
+  #                      thresholdValue = min(unlist(.$LL)),
+  #                      thresholdColor = "red", #"#00f", # Color underneath the threshold
+  #                      lineColor = "green", # Color over the threshold
+  #                      lineWidth= 3 #defaults to 1
+  #                      ),
+  # TrendDiscrete_High = spk_chr(
+  #                      Value, type= "discrete", #One of 'line' (default), 'bar', 'tristate', 'discrete', 'bullet', 'pie' or 'box'
+  #                      thresholdValue = max(unlist(.$UL)),
+  #                      thresholdColor = "green", #"#00f", # Color underneath the threshold
+  #                      lineColor = "red", # Color over the threshold
+  #                      lineWidth= 3 #defaults to 1
+  #                      ),
+  # TrendBox = spk_chr(
+  #                      Value, type= "box", #One of 'line' (default), 'bar', 'tristate', 'discrete', 'bullet', 'pie' or 'box'
+  #                      showOutliers = TRUE
+  #                      ),
       ) %>%
   arrange(desc(Date)) %>%
   mutate(Value =as.numeric(Value)) %>% #Make sure that everything is converted to a number
@@ -564,11 +625,63 @@ for(j in (unique(Labs_plot$Name))){
   
 }
 
+
+
+```
+
+
+
+### Attention
+```{r}
+out_attention <- Labs_plot_out %>%
+arrange(Category, Name) %>%
+filter(OOS == 1) %>%
+mutate( UL = ifelse(is.null(UL) | is.na(UL) | is.nan(UL), Inf, UL ))  %>% #Set limit to inf if no limit
+mutate( LL = ifelse(is.null(LL) | is.na(LL) | is.nan(LL), -Inf, LL ))  %>% #Set limit to inf if no limit  
+mutate( Value = cell_spec(Value, "html", color = ifelse((Value > UL | Value < LL), "red", "green"))) %>% #Color if OOS      
+  formattable::format_table(
+  x = .,
+  formatters = list(
+    align=c("l")
+  )
+) %>%
+  kable_styling("striped", full_width = F) %>%
+  htmltools::HTML() %>%
+  shiny::div() %>%
+  sparkline::spk_add_deps()
+
+out_attention
+```
+
+### Monitor
+```{r}
+out_monitor <- Labs_plot_out %>%
+arrange(Category, Name) %>%
+filter(Monitor == 1) %>%
+mutate( UL = ifelse(is.null(UL) | is.na(UL) | is.nan(UL), Inf, UL ))  %>% #Set limit to inf if no limit
+mutate( LL = ifelse(is.null(LL) | is.na(LL) | is.nan(LL), -Inf, LL ))  %>% #Set limit to inf if no limit  
+mutate( Value = cell_spec(Value, "html", color = ifelse((Value > UL | Value < LL), "red", "green"))) %>% #Color if OOS      
+  formattable::format_table(
+  x = .,
+  formatters = list(
+    align=c("l")
+  )
+) %>%
+  kable_styling("striped", full_width = F) %>%
+  htmltools::HTML() %>%
+  shiny::div() %>%
+  sparkline::spk_add_deps()
+
+out_monitor
+```
+
+### All
+```{r}
 out <- Labs_plot_out %>%
 arrange(Category, Name) %>%
 mutate( UL = ifelse(is.null(UL) | is.na(UL) | is.nan(UL), Inf, UL ))  %>% #Set limit to inf if no limit
 mutate( LL = ifelse(is.null(LL) | is.na(LL) | is.nan(LL), -Inf, LL ))  %>% #Set limit to inf if no limit  
-mutate( Value = cell_spec(Value, "html", color = ifelse((Value > UL | Value < LL), "red", "green"))) %>% #Color if OOS         
+mutate( Value = cell_spec(Value, "html", color = ifelse((Value > UL | Value < LL), "red", "green"))) %>% #Color if OOS      
   formattable::format_table(
   x = .,
   formatters = list(
@@ -581,100 +694,27 @@ mutate( Value = cell_spec(Value, "html", color = ifelse((Value > UL | Value < LL
   sparkline::spk_add_deps()
 
 out
-
 ```
 
 
-### Control Charts 
+### Control Charts  
+
 ```{r, out.width='100%', fig.width=10, fig.height=4, fig.align="left"}
-#, fig.width=15
-#out.width = "100%", fig.height = 5
-#dpi = 200
-# out.width = "100%"
-#https://cran.r-project.org/web/packages/ggQC/vignettes/XbarR_HOTTO.html
-#https://jmarriott.com/posts/testing-ggqc/
-#https://r-bar.net/ggqc-ggplot-quality-control-charts/
-#https://stackoverflow.com/questions/54400546/how-to-add-an-histogram-or-density-plot-on-the-right-hand-side-of-this-example-p
-#https://stackoverflow.com/questions/7705345/how-can-i-extract-plot-axes-ranges-for-a-ggplot2-object
-#https://stackoverflow.com/questions/55248191/if-condition-inside-ggplot?noredirect=1&lq=1
-#https://timelyportfolio.github.io/dataui/articles/replicate_tufte_example.html
-#https://patchwork.data-imaginist.com/articles/guides/assembly.html
 
-Labs_spc_raw <- Labs  %>%
-    rbind(Thyroid) %>%
-    #filter(Name %in% c("Ferritin (ng/mL)", "Alkaline Phosphatase (U/L)")) %>%
-    filter(is.na(Value) != TRUE) %>%
-    filter(is.null(Value) != TRUE) %>%
-    filter(Value != "NULL") %>%
-    mutate(Value = as.numeric(Value)) %>%
-    filter(is.na(Value) != TRUE)
-
-for(q in unique(Labs_spc_raw$Name)){
-  Labs_spc <- Labs_spc_raw  %>%
-    rbind(Thyroid) %>%
-    filter(Name %in% c(q)) %>%
-    arrange(Date)
-  
-  Labs_spc_plot <- Labs_spc %>%
-    arrange(Date) %>%
-    mutate(Run_Number = row_number()) %>%
-    select(Name, Value, Run_Number) %>%
-    rename("Process" = "Name") %>%
-    #mutate(Process = 1,Value =as.numeric(Value)) %>%
-    mutate(Value =as.numeric(Value)) %>%
-    ungroup()
-  
-  LL_flag = is.numeric(min(Labs_spc$LL, na.rm = TRUE)) 
-  UL_flag = is.numeric(max(Labs_spc$UL, na.rm = TRUE)) 
-  
-  if(LL_flag){LL = min(Labs_spc$LL)}
-  if(UL_flag){UL = max(Labs_spc$UL)}
-
-  y_range <- range(Labs_spc_plot$Value)
-   
-  ### Make the plot
-  XmR_Plot <- 
-    ggplot(Labs_spc_plot, aes(x = Run_Number, y = Value)) + #init ggplot
-    geom_point() + geom_line() + # add the points and lines
-    {if(LL_flag){geom_hline(aes(yintercept=(LL), color = "black"))}} +
-    {if(LL_flag){geom_label(aes(0,LL,label = paste0("LL-",LL)))}} +
-    {if(UL_flag){geom_hline(aes(yintercept=(UL), color = "black"))}} +
-    {if(UL_flag){geom_label(aes(0,UL,label = paste0("UL-",UL)))}} +
-    #if(!is.na(min(Labs_spc$LL))) geom_hline(data = Labs_plot, aes(yintercept=LL), color = "red", linetype="dashed") +  #Add LL
-    stat_QC(method = "XmR",      # specify QC charting method
-            auto.label = T,      # Use Autolabels
-            label.digits = 2,    # Use two digit in the label
-            show.1n2.sigma = T   # Show 1 and two sigma lines
-            ) +  
-    scale_x_continuous( expand =  expand_scale(mult = .15)) +  # Pad the x-axis
-    theme(axis.text.x=element_text(angle=60, hjust=1), legend.title = element_blank(), legend.position = "none" )
-  
-  # Get control chart range 
-  y_range=layer_scales(XmR_Plot)$y$range$range
-  
-  ### Create density plot
-  dens_plot <- ggplot(Labs_spc_plot, aes(x = Value)) +
-    geom_density() +
-    coord_flip() +
-    scale_x_continuous(limits = y_range) +
-    theme(axis.title.y = element_blank(), axis.text.x=element_text(angle=60, hjust=1), legend.title = element_blank(), legend.position = "none" )
-  
-  #y_dens=layer_scales(dens_plot)$x$range$range
-  
-  plot_out = 
-    #XmR_Plot + 
-    #dens_plot + 
-    #gridExtra::tableGrob(Labs_spc %>% select(Date, Value)) +
-    wrap_plots(XmR_Plot, dens_plot, gridExtra::tableGrob(Labs_spc %>% select(Date, Value)) ) +
-    plot_layout(nrow = 1, widths = c(1, 0.4,0.7,0.1)) + 
-    #plot_layout(nrow = 1, widths = c(.8, 0.2, 0.3)) + 
-    plot_annotation(
-  title = paste0(q),
-  #subtitle = paste0("Most recent"),
-  caption = paste0("Data from ",min(Labs_spc$Date), " to ",max(Labs_spc$Date)))
-  
-  print(plot_out)
-}
+#   plot_out = 
+#     #XmR_Plot + 
+#     #dens_plot + 
+#     #gridExtra::tableGrob(Labs_spc %>% select(Date, Value)) +
+#     wrap_plots(XmR_Plot, dens_plot, gridExtra::tableGrob(Labs_spc %>% select(Date, Value)) ) +
+#     plot_layout(nrow = 1, widths = c(1, 0.4,0.7,0.1)) + 
+#     #plot_layout(nrow = 1, widths = c(.8, 0.2, 0.3)) + 
+#     plot_annotation(
+#   title = paste0(q),
+#   #subtitle = paste0("Most recent"),
+#   caption = paste0("Data from ",min(Labs_spc$Date), " to ",max(Labs_spc$Date)))
+#   
+#   print(plot_out)
+# }
 
 ```
 
@@ -685,8 +725,64 @@ for(q in unique(Labs_spc_raw$Name)){
 
 
 
+Medications {data-orientation=rows}
+===================================== 
+
+Row 
+-------------------------------------
     
-Procedures {data-orientation=rows}
+### Current medications
+
+```{r}
+kable(Medicines %>% arrange(Treatment) %>% filter(is.na(EndDate)==TRUE) %>% select(-EndDate), align = "c") %>%
+  kable_styling(full_width = F) %>%
+  column_spec(1, bold = T) %>%
+  collapse_rows(columns = 1:2, valign = "top")
+
+```
+
+Row {.tabset}
+-------------------------------------
+
+### Plot
+
+```{r}
+Medicines_plot <- Medicines %>%
+  mutate(EndDate = replace(EndDate, is.na(EndDate), Sys.Date())) %>%
+  mutate(Medicine = paste0(Medication," - ", Qty)) %>%
+  arrange(StartDate)
+
+timevis_data <- data.frame(
+  id = 1:nrow(Medicines_plot),
+  content = Medicines_plot$Medicine,
+  start = Medicines_plot$StartDate,
+  end   = Medicines_plot$EndDate,
+  title = Medicines_plot$Medicine,
+  group = Medicines_plot$Treatment
+)
+
+timeline_groups <- data.frame(
+  id = unique(Medicines_plot$Treatment),
+  content = unique(Medicines_plot$Treatment)
+)
+
+timevis(data = timevis_data, groups = timeline_groups, options = list(editable = FALSE))
+# timevis(data = timevis_data, groups = timeline_groups, options = list(editable = FALSE),showZoom = T,fit = TRUE,height = "800px")
+```
+
+### Table
+
+```{r}
+# Collapse first column if contents repeat
+kable(Medicines %>% arrange(Treatment), align = "c") %>%
+  kable_styling(full_width = F) %>%
+  column_spec(1, bold = T) %>%
+  collapse_rows(columns = 1:2, valign = "top")
+
+```
+
+
+Conditions / Procedures {data-orientation=rows}
 ===================================== 
 
 Rows {.tabset}
@@ -715,40 +811,7 @@ kable(History %>% arrange(Date), align = "c") %>%
 
 ```
 
-### Medications
 
-```{r}
-Medicines_plot <- Medicines %>%
-  mutate(EndDate = replace(EndDate, is.na(EndDate), Sys.Date())) %>%
-  mutate(Medicine = paste0(Medication," - ", Qty)) %>%
-  arrange(StartDate)
-
-timevis_data <- data.frame(
-  id = 1:nrow(Medicines_plot),
-  content = Medicines_plot$Medicine,
-  start = Medicines_plot$StartDate,
-  end   = Medicines_plot$EndDate,
-  title = Medicines_plot$Medicine,
-  group = Medicines_plot$Treatment
-)
-
-timeline_groups <- data.frame(
-  id = unique(Medicines_plot$Treatment),
-  content = unique(Medicines_plot$Treatment)
-)
-
-timevis(data = timevis_data, groups = timeline_groups, options = list(editable = FALSE))
-# timevis(data = timevis_data, groups = timeline_groups, options = list(editable = FALSE),showZoom = T,fit = TRUE,height = "800px")
-```
-
-```{r}
-# Collapse first column if contents repeat
-kable(Medicines %>% arrange(Treatment), align = "c") %>%
-  kable_styling(full_width = F) %>%
-  column_spec(1, bold = T) %>%
-  collapse_rows(columns = 1:2, valign = "top")
-
-```
 
 ### Test records
 ```{r}
