--- a/MedicalExplorer.rmd
+++ b/MedicalExplorer.rmd
@@ -632,24 +632,96 @@ out
 ```
 
 
- 
-
+ ### Control Charts 
 ```{r, out.width='100%', fig.width=10, fig.height=4, fig.align="left"}
-### Control Charts 
-#   plot_out = 
-#     #XmR_Plot + 
-#     #dens_plot + 
-#     #gridExtra::tableGrob(Labs_spc %>% select(Date, Value)) +
-#     wrap_plots(XmR_Plot, dens_plot, gridExtra::tableGrob(Labs_spc %>% select(Date, Value)) ) +
-#     plot_layout(nrow = 1, widths = c(1, 0.4,0.7,0.1)) + 
-#     #plot_layout(nrow = 1, widths = c(.8, 0.2, 0.3)) + 
-#     plot_annotation(
-#   title = paste0(q),
-#   #subtitle = paste0("Most recent"),
-#   caption = paste0("Data from ",min(Labs_spc$Date), " to ",max(Labs_spc$Date)))
-#   
-#   print(plot_out)
-# }
+#, fig.width=15
+#out.width = "100%", fig.height = 5
+#dpi = 200
+# out.width = "100%"
+#https://cran.r-project.org/web/packages/ggQC/vignettes/XbarR_HOTTO.html
+#https://jmarriott.com/posts/testing-ggqc/
+#https://r-bar.net/ggqc-ggplot-quality-control-charts/
+#https://stackoverflow.com/questions/54400546/how-to-add-an-histogram-or-density-plot-on-the-right-hand-side-of-this-example-p
+#https://stackoverflow.com/questions/7705345/how-can-i-extract-plot-axes-ranges-for-a-ggplot2-object
+#https://stackoverflow.com/questions/55248191/if-condition-inside-ggplot?noredirect=1&lq=1
+#https://timelyportfolio.github.io/dataui/articles/replicate_tufte_example.html
+#https://patchwork.data-imaginist.com/articles/guides/assembly.html
+
+Labs_spc_raw <- Labs  %>%
+    rbind(Thyroid) %>%
+    #filter(Name %in% c("Ferritin (ng/mL)", "Alkaline Phosphatase (U/L)")) %>%
+    filter(is.na(Value) != TRUE) %>%
+    filter(is.null(Value) != TRUE) %>%
+    filter(Value != "NULL") %>%
+    mutate(Value = as.numeric(Value)) %>%
+    filter(is.na(Value) != TRUE)
+
+for(q in unique(Labs_spc_raw$Name)){
+  Labs_spc <- Labs_spc_raw  %>%
+    rbind(Thyroid) %>%
+    filter(Name %in% c(q)) %>%
+    arrange(Date)
+  
+  Labs_spc_plot <- Labs_spc %>%
+    arrange(Date) %>%
+    mutate(Run_Number = row_number()) %>%
+    select(Name, Value, Run_Number) %>%
+    rename("Process" = "Name") %>%
+    #mutate(Process = 1,Value =as.numeric(Value)) %>%
+    mutate(Value =as.numeric(Value)) %>%
+    ungroup()
+  
+  LL_flag = is.numeric(min(Labs_spc$LL, na.rm = TRUE)) 
+  UL_flag = is.numeric(max(Labs_spc$UL, na.rm = TRUE)) 
+  
+  if(LL_flag){LL = min(Labs_spc$LL)}
+  if(UL_flag){UL = max(Labs_spc$UL)}
+
+  y_range <- range(Labs_spc_plot$Value)
+   
+  ### Make the plot
+  XmR_Plot <- 
+    ggplot(Labs_spc_plot, aes(x = Run_Number, y = Value)) + #init ggplot
+    geom_point() + geom_line() + # add the points and lines
+    {if(LL_flag){geom_hline(aes(yintercept=(LL), color = "black"))}} +
+    {if(LL_flag){geom_label(aes(0,LL,label = paste0("LL-",LL)))}} +
+    {if(UL_flag){geom_hline(aes(yintercept=(UL), color = "black"))}} +
+    {if(UL_flag){geom_label(aes(0,UL,label = paste0("UL-",UL)))}} +
+    #if(!is.na(min(Labs_spc$LL))) geom_hline(data = Labs_plot, aes(yintercept=LL), color = "red", linetype="dashed") +  #Add LL
+    stat_QC(method = "XmR",      # specify QC charting method
+            auto.label = T,      # Use Autolabels
+            label.digits = 2,    # Use two digit in the label
+            show.1n2.sigma = T   # Show 1 and two sigma lines
+            ) +  
+    scale_x_continuous( expand =  expand_scale(mult = .15)) +  # Pad the x-axis
+    theme(axis.text.x=element_text(angle=60, hjust=1), legend.title = element_blank(), legend.position = "none" )
+  
+  # Get control chart range 
+  y_range=layer_scales(XmR_Plot)$y$range$range
+  
+  ### Create density plot
+  dens_plot <- ggplot(Labs_spc_plot, aes(x = Value)) +
+    geom_density() +
+    coord_flip() +
+    scale_x_continuous(limits = y_range) +
+    theme(axis.title.y = element_blank(), axis.text.x=element_text(angle=60, hjust=1), legend.title = element_blank(), legend.position = "none" )
+  
+  #y_dens=layer_scales(dens_plot)$x$range$range
+  
+  plot_out = 
+    #XmR_Plot + 
+    #dens_plot + 
+    #gridExtra::tableGrob(Labs_spc %>% select(Date, Value)) +
+    wrap_plots(XmR_Plot, dens_plot, gridExtra::tableGrob(Labs_spc %>% select(Date, Value)) ) +
+    plot_layout(nrow = 1, widths = c(1, 0.4,0.7,0.1)) + 
+    #plot_layout(nrow = 1, widths = c(.8, 0.2, 0.3)) + 
+    plot_annotation(
+  title = paste0(q),
+  #subtitle = paste0("Most recent"),
+  caption = paste0("Data from ",min(Labs_spc$Date), " to ",max(Labs_spc$Date)))
+  
+  print(plot_out)
+}
 
 ```
 
