--- a/MedicalExplorer.rmd
+++ b/MedicalExplorer.rmd
@@ -373,6 +373,97 @@ ggplotly(p) %>%
 
 
 
+Rows
+-------------------------------------
+
+
+
+
+### Systolic Blood Pressure trend
+```{r}
+# TODO: add conditional smoothing https://rafalab.github.io/dsbook/smoothing.html
+bp_v <- data.frame(Vitals) %>%
+  filter(Test == "BP systolic pressure (top number)") %>%
+  mutate(Value = as.numeric(Value)) %>%
+  arrange(Date) %>% 
+  mutate(previous_weight = lag(Value, order_by = Date), Date =as.Date(Date)) 
+#rename("BP systolic pressure (top number)" = "Value") %>%
+
+span <- 60
+
+fit <- with(bp_v, 
+            ksmooth(Date, Value, kernel = "box", bandwidth = span))
+
+fit <- data.frame(Date = fit$x, smooth = fit$y) %>%
+  mutate(smooth = as.numeric(smooth)) %>%
+  filter(!is.na(smooth))
+
+p <- bp_v %>% 
+  ggplot(aes(Date, Value)) +
+    geom_point(size = 1.5, alpha = .5, color = "grey") + 
+  geom_line(data = fit, aes(Date, smooth), color="salmon") +
+   scale_x_date(date_labels = "%Y/%m/%d", date_breaks = "3 month") +
+   labs(x = "Year-Month", y = "Blood Pressure (mm Hg)") +
+    theme(axis.text.x=element_text(angle=60, hjust=1),
+          legend.title = element_blank(),
+          legend.position = "none",
+          panel.border = element_blank(),
+          panel.background = element_blank(),
+          panel.grid.major = element_blank(),
+          panel.grid.minor = element_blank())
+
+ggplotly(p) %>% 
+  layout(title = list(text = "Systolic Blood Pressure (mm Hg)", y = 0.95),
+     #xaxis = list(showticklabels = FALSE),
+     legend = list(orientation = "h",
+                   y = 0, x = 0))
+
+
+```
+
+### Diastolic Blood Pressure trend
+```{r}
+# TODO: add conditional smoothing https://rafalab.github.io/dsbook/smoothing.html
+bp_v <- data.frame(Vitals) %>%
+  filter(Test == "BP diastolic pressure (bottom number)") %>%
+  mutate(Value = as.numeric(Value)) %>%
+  arrange(Date) %>% 
+  mutate(previous_weight = lag(Value, order_by = Date), Date =as.Date(Date)) 
+#rename("BP systolic pressure (top number)" = "Value") %>%
+
+span <- 60
+
+fit <- with(bp_v, 
+            ksmooth(Date, Value, kernel = "box", bandwidth = span))
+
+fit <- data.frame(Date = fit$x, smooth = fit$y) %>%
+  mutate(smooth = as.numeric(smooth)) %>%
+  filter(!is.na(smooth))
+
+p <- bp_v %>% 
+  ggplot(aes(Date, Value)) +
+    geom_point(size = 1.5, alpha = .5, color = "grey") + 
+  geom_line(data = fit, aes(Date, smooth), color="salmon") +
+   scale_x_date(date_labels = "%Y/%m/%d", date_breaks = "3 month") +
+   labs(x = "Year-Month", y = "Blood Pressure (mm Hg)") +
+    theme(axis.text.x=element_text(angle=60, hjust=1),
+          legend.title = element_blank(),
+          legend.position = "none",
+          panel.border = element_blank(),
+          panel.background = element_blank(),
+          panel.grid.major = element_blank(),
+          panel.grid.minor = element_blank())
+
+ggplotly(p) %>% 
+  layout(title = list(text = "Diastolic Blood Pressure (mm Hg)", y = 0.95),
+     #xaxis = list(showticklabels = FALSE),
+     legend = list(orientation = "h",
+                   y = 0, x = 0))
+
+
+```
+
+
 
 
 
